add api for starting and stopping time captures
